# whitenn

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: assign_param.wnn  examples.md  hello_whitenn.wnn  linear_regression.wnn  loss_before_graph.wnn  mlp_one_step.wnn  mystery_no_rule.wnn  transformer_block.wnn  transformer_preference.wnn  transformer_sort_teacher.wnn  unknown_rule_call.wnn  unknown_rule_deriv_target.wnn
tests/: test_autodiff.py  test_cli.py  test_error_formatting.py  test_explain.py  test_graph.py  test_graphviz.py  test_interpreter.py  test_optim.py  test_params.py  test_parser.py  test_rules.py  test_validate.py
whitenn/: __init__.py  ast.py  cli.py  errors.py  grammar.lark  interpreter.py  parser.py  validate.py
whitenn/runtime/: __init__.py  autodiff.py  explain.py  graph.py  optim.py  params.py  rules.py  values.py
